--- a/dev_environment.yaml
+++ b/dev_environment.yaml
@@ -7,48 +7,48 @@ dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
   - bzip2=1.0.8
-  - ca-certificates=2024.7.4
-  - ld_impl_linux-64=2.40
+  - ca-certificates=2024.8.30
+  - ld_impl_linux-64=2.43
   - libffi=3.4.2
-  - libgcc-ng=14.1.0
-  - libgomp=14.1.0
+  - libgcc=14.2.0
+  - libgcc-ng=14.2.0
+  - libgomp=14.2.0
   - libnsl=2.0.1
-  - libsqlite=3.46.0
+  - libsqlite=3.47.0
   - libuuid=2.38.1
   - libxcrypt=4.4.36
   - libzlib=1.3.1
   - ncurses=6.5
-  - openssl=3.3.1
+  - openssl=3.4.0
   - pip=23.0.1
-  - python=3.10.14
+  - python=3.10.15
   - readline=8.2
   - setuptools=69.5.1
   - tk=8.6.13
-  - wheel=0.44.0
+  - wheel=0.45.0
   - xz=5.2.6
   - pip:
       - absl-py==2.1.0
       - adal==1.2.7
-      - aiohappyeyeballs==2.4.0
-      - aiohttp==3.10.5
+      - aiohappyeyeballs==2.4.3
+      - aiohttp==3.11.7
       - aiosignal==1.3.1
-      - alembic==1.13.2
-      - aniso8601==9.0.1
+      - alembic==1.14.0
       - antlr4-python3-runtime==4.9.3
-      - anyio==4.4.0
+      - anyio==4.6.2.post1
       - applicationinsights==0.11.10
       - argcomplete==3.1.6
       - asttokens==2.4.1
       - async-timeout==4.0.3
       - attrs==24.2.0
-      - azure-ai-ml==1.19.0
+      - azure-ai-ml==1.22.4
       - azure-appconfiguration==1.1.1
       - azure-batch==14.0.0
       - azure-cli==2.53.1
       - azure-cli-core==2.53.1
       - azure-cli-telemetry==1.1.0
       - azure-common==1.1.28
-      - azure-core==1.30.2
+      - azure-core==1.32.0
       - azure-cosmos==3.2.0
       - azure-data-tables==12.4.0
       - azure-datalake-store==0.0.53
@@ -76,7 +76,7 @@ dependencies:
       - azure-mgmt-containerinstance==10.1.0
       - azure-mgmt-containerregistry==10.1.0
       - azure-mgmt-containerservice==26.0.0
-      - azure-mgmt-core==1.4.0
+      - azure-mgmt-core==1.5.0
       - azure-mgmt-cosmosdb==9.2.0
       - azure-mgmt-databoxedge==1.0.0
       - azure-mgmt-datalake-nspkg==3.0.1
@@ -103,11 +103,11 @@ dependencies:
       - azure-mgmt-monitor==5.0.1
       - azure-mgmt-msi==7.0.0
       - azure-mgmt-netapp==10.1.0
-      - azure-mgmt-network==26.0.0
+      - azure-mgmt-network==28.0.0
       - azure-mgmt-nspkg==3.0.2
       - azure-mgmt-policyinsights==1.1.0b4
       - azure-mgmt-privatedns==1.0.0
-      - azure-mgmt-rdbms==10.2.0b17
+      - azure-mgmt-rdbms==10.2.0b18
       - azure-mgmt-recoveryservices==2.5.0
       - azure-mgmt-recoveryservicesbackup==7.0.0
       - azure-mgmt-redhatopenshift==1.3.0
@@ -115,7 +115,7 @@ dependencies:
       - azure-mgmt-resource==23.1.0b2
       - azure-mgmt-search==9.1.0
       - azure-mgmt-security==5.0.0
-      - azure-mgmt-servicebus==8.2.0
+      - azure-mgmt-servicebus==8.2.1
       - azure-mgmt-servicefabric==1.0.0
       - azure-mgmt-servicefabricmanagedclusters==1.0.0
       - azure-mgmt-servicelinker==1.2.0b1
@@ -131,117 +131,119 @@ dependencies:
       - azure-storage-blob==12.19.0
       - azure-storage-common==1.4.2
       - azure-storage-file-datalake==12.14.0
-      - azure-storage-file-share==12.17.0
+      - azure-storage-file-share==12.20.0
       - azure-synapse-accesscontrol==0.5.0
       - azure-synapse-artifacts==0.17.0
       - azure-synapse-managedprivateendpoints==0.4.0
       - azure-synapse-spark==0.2.0
-      - azureml-automl-core==1.57.0
-      - azureml-core==1.57.0
+      - azureml-automl-core==1.58.0
+      - azureml-core==1.58.0
       - azureml-dataprep==5.1.6
       - azureml-dataprep-native==41.0.0
-      - azureml-dataprep-rslex==2.22.3
-      - azureml-dataset-runtime==1.57.0
-      - azureml-mlflow==1.57.0
-      - azureml-pipeline==1.57.0
-      - azureml-pipeline-core==1.57.0
-      - azureml-pipeline-steps==1.57.0
-      - azureml-sdk==1.57.0
-      - azureml-telemetry==1.57.0
-      - azureml-tensorboard==1.57.0
-      - azureml-train-automl-client==1.57.0
-      - azureml-train-core==1.57.0
-      - azureml-train-restclients-hyperdrive==1.57.0
+      - azureml-dataprep-rslex==2.22.5
+      - azureml-dataset-runtime==1.58.0
+      - azureml-mlflow==1.58.0.post3
+      - azureml-pipeline==1.58.0
+      - azureml-pipeline-core==1.58.0
+      - azureml-pipeline-steps==1.58.0
+      - azureml-sdk==1.58.0
+      - azureml-telemetry==1.58.0
+      - azureml-tensorboard==1.58.0
+      - azureml-train-automl-client==1.58.0
+      - azureml-train-core==1.58.0
+      - azureml-train-restclients-hyperdrive==1.58.0
       - backports-tempfile==1.0
       - backports-weakref==1.0.post1
-      - bcrypt==4.2.0
-      - black==24.8.0
-      - blinker==1.8.2
+      - bcrypt==4.2.1
+      - black==24.10.0
+      - blinker==1.9.0
       - cachetools==5.5.0
-      - certifi==2024.7.4
-      - cffi==1.17.0
+      - certifi==2024.8.30
+      - cffi==1.17.1
       - cfgv==3.4.0
       - chardet==3.0.4
-      - charset-normalizer==3.3.2
+      - charset-normalizer==3.4.0
       - click==8.1.7
       - cloudpickle==2.2.1
       - colorama==0.4.6
       - comm==0.2.2
-      - conda-merge==0.2.0
+      - conda-merge==0.3.0
       - contextlib2==21.6.0
-      - contourpy==1.2.1
-      - cryptography==43.0.0
+      - contourpy==1.3.1
+      - cryptography==43.0.3
       - cycler==0.12.1
-      - databricks-sdk==0.30.0
+      - databricks-sdk==0.38.0
       - dataclasses-json==0.6.7
-      - debugpy==1.8.5
+      - debugpy==1.8.8
       - decorator==5.1.1
-      - deprecated==1.2.14
-      - distlib==0.3.8
+      - deprecated==1.2.15
+      - distlib==0.3.9
       - distro==1.9.0
       - docker==7.1.0
       - entrypoints==0.4
       - exceptiongroup==1.2.2
-      - executing==2.0.1
+      - executing==2.1.0
       - fabric==2.7.1
-      - filelock==3.15.4
+      - filelock==3.16.1
       - flake8==7.1.1
-      - flask==3.0.3
-      - fonttools==4.53.1
-      - frozenlist==1.4.1
+      - flask==3.1.0
+      - fonttools==4.55.0
+      - frozenlist==1.5.0
       - fusepy==3.0.1
       - gitdb==4.0.11
       - gitpython==3.1.43
-      - google-api-core==2.19.1
-      - google-auth==2.34.0
-      - googleapis-common-protos==1.63.2
-      - graphene==3.3
-      - graphql-core==3.2.3
+      - google-api-core==2.23.0
+      - google-auth==2.36.0
+      - googleapis-common-protos==1.66.0
+      - graphene==3.4.3
+      - graphql-core==3.2.5
       - graphql-relay==3.2.0
-      - greenlet==3.0.3
-      - grpcio==1.65.5
+      - greenlet==3.1.1
+      - grpcio==1.68.0
       - gunicorn==22.0.0
       - h11==0.14.0
-      - hi-ml-azure==0.5.1
-      - httpcore==1.0.5
-      - httpx==0.27.0
+      - hi-ml-azure==0.5.2
+      - httpcore==1.0.7
+      - httpx==0.27.2
       - humanfriendly==10.0
       - hydra-core==1.3.2
-      - identify==2.6.0
-      - idna==3.7
+      - identify==2.6.2
+      - idna==3.10
       - importlib-metadata==7.2.1
       - importlib-resources==6.4.0
       - iniconfig==2.0.0
       - invoke==1.7.3
       - ipykernel==6.29.5
-      - ipython==8.26.0
-      - isodate==0.6.1
+      - ipython==8.29.0
+      - isodate==0.7.2
       - itsdangerous==2.2.0
       - javaproperties==0.5.2
-      - jedi==0.19.1
+      - jedi==0.19.2
       - jeepney==0.8.0
       - jinja2==3.1.4
+      - jiter==0.7.1
       - jmespath==1.0.1
       - joblib==1.4.2
       - jsondiff==2.0.0
       - jsonpatch==1.33
-      - jsonpickle==3.2.2
+      - jsonpickle==3.4.2
       - jsonpointer==3.0.0
       - jsonschema==4.23.0
-      - jsonschema-specifications==2023.12.1
-      - jupyter-client==8.6.2
+      - jsonschema-specifications==2024.10.1
+      - jupyter-client==8.6.3
       - jupyter-core==5.7.2
-      - kiwisolver==1.4.5
+      - kiwisolver==1.4.7
       - knack==0.11.0
-      - langchain==0.1.4
-      - langchain-community==0.0.20
-      - langchain-core==0.1.23
-      - langchain-openai==0.0.5
-      - langsmith==0.0.87
-      - mako==1.3.5
+      - langchain==0.2.17
+      - langchain-community==0.2.19
+      - langchain-core==0.2.43
+      - langchain-openai==0.1.25
+      - langchain-text-splitters==0.2.4
+      - langsmith==0.1.144
+      - mako==1.3.6
       - markdown==3.7
-      - markupsafe==2.1.5
-      - marshmallow==3.22.0
+      - markupsafe==3.0.2
+      - marshmallow==3.23.1
       - matplotlib==3.9.2
       - matplotlib-inline==0.1.7
       - mccabe==0.7.0
@@ -252,8 +254,8 @@ dependencies:
       - msal-extensions==1.0.0
       - msrest==0.7.1
       - msrestazure==0.6.4.post1
-      - multidict==6.0.5
-      - mypy==1.11.1
+      - multidict==6.1.0
+      - mypy==1.13.0
       - mypy-extensions==1.0.0
       - ndg-httpsclient==0.5.1
       - nest-asyncio==1.6.0
@@ -261,68 +263,71 @@ dependencies:
       - numpy==1.23.5
       - oauthlib==3.2.2
       - omegaconf==2.3.0
-      - openai==1.10.0
+      - openai==1.55.0
       - opencensus==0.11.4
       - opencensus-context==0.1.3
       - opencensus-ext-azure==1.1.13
       - opencensus-ext-logging==0.1.1
-      - opentelemetry-api==1.26.0
-      - opentelemetry-sdk==1.26.0
-      - opentelemetry-semantic-conventions==0.47b0
-      - packaging==23.2
-      - pandas==2.2.2
-      - pandas-stubs==2.2.2.240807
+      - opentelemetry-api==1.28.2
+      - opentelemetry-sdk==1.28.2
+      - opentelemetry-semantic-conventions==0.49b2
+      - orjson==3.10.11
+      - packaging==24.2
+      - pandas==2.2.3
+      - pandas-stubs==2.2.3.241009
       - param==1.13.0
-      - paramiko==3.4.1
+      - paramiko==3.5.0
       - parso==0.8.4
       - pathlib2==2.3.7.post1
       - pathspec==0.12.1
       - pexpect==4.9.0
-      - pillow==10.4.0
-      - pkginfo==1.11.1
-      - platformdirs==4.2.2
+      - pillow==11.0.0
+      - pkginfo==1.11.2
+      - platformdirs==4.3.6
       - pluggy==1.5.0
       - portalocker==2.10.1
-      - pre-commit==3.8.0
-      - prompt-toolkit==3.0.47
-      - proto-plus==1.24.0
+      - pre-commit==4.0.1
+      - prompt-toolkit==3.0.48
+      - propcache==0.2.0
+      - proto-plus==1.25.0
       - protobuf==3.20.3
       - psutil==5.9.8
       - ptyprocess==0.7.0
       - pure-eval==0.2.3
       - pyarrow==15.0.2
-      - pyasn1==0.6.0
-      - pyasn1-modules==0.4.0
+      - pyasn1==0.6.1
+      - pyasn1-modules==0.4.1
       - pycodestyle==2.12.1
-      - pycomposefile==0.0.31
+      - pycomposefile==0.0.32
       - pycparser==2.22
       - pydantic==1.10.17
-      - pydash==8.0.3
+      - pydash==8.0.4
       - pyflakes==3.2.0
       - pygithub==1.59.1
       - pygments==2.18.0
-      - pyjwt==2.9.0
+      - pyjwt==2.10.0
       - pynacl==1.5.0
       - pyopenssl==24.2.1
-      - pyparsing==3.1.2
+      - pyparsing==3.2.0
       - pysocks==1.7.1
-      - pytest==8.3.2
+      - pytest==8.3.3
       - pytest-lazy-fixture==0.6.3
       - python-dateutil==2.9.0.post0
-      - pytz==2024.1
+      - pytz==2024.2
       - pyyaml==6.0.2
       - pyzmq==26.2.0
       - querystring-parser==1.2.4
-      - redis==5.0.8
+      - redis==5.2.0
       - referencing==0.35.1
-      - regex==2024.7.24
+      - regex==2024.11.6
       - requests==2.32.3
       - requests-oauthlib==2.0.0
-      - rpds-py==0.20.0
+      - requests-toolbelt==1.0.0
+      - rpds-py==0.21.0
       - rsa==4.9
       - ruamel-yaml==0.18.6
-      - ruamel-yaml-clib==0.2.8
-      - scikit-learn==1.5.1
+      - ruamel-yaml-clib==0.2.12
+      - scikit-learn==1.5.2
       - scipy==1.14.1
       - scp==0.13.6
       - secretstorage==3.3.3
@@ -330,34 +335,35 @@ dependencies:
       - six==1.16.0
       - smmap==5.0.1
       - sniffio==1.3.1
-      - sqlalchemy==2.0.32
-      - sqlparse==0.5.1
+      - sqlalchemy==2.0.36
+      - sqlparse==0.5.2
       - sshtunnel==0.1.5
       - stack-data==0.6.3
       - strictyaml==1.7.3
       - tabulate==0.9.0
       - tenacity==8.5.0
-      - tensorboard==2.17.1
+      - tensorboard==2.18.0
       - tensorboard-data-server==0.7.2
       - threadpoolctl==3.5.0
-      - tiktoken==0.5.2
-      - tomli==2.0.1
+      - tiktoken==0.8.0
+      - tomli==2.1.0
       - tornado==6.4.1
-      - tqdm==4.66.5
+      - tqdm==4.67.0
       - traitlets==5.14.3
       - types-pillow==10.2.0.20240822
-      - types-pytz==2024.1.0.20240417
-      - types-pyyaml==6.0.12.20240808
-      - types-tqdm==4.66.0.20240417
+      - types-pytz==2024.2.0.20241003
+      - types-pyyaml==6.0.12.20240917
+      - types-requests==2.32.0.20241016
+      - types-tqdm==4.67.0.20241119
       - typing-extensions==4.12.2
       - typing-inspect==0.9.0
-      - tzdata==2024.1
-      - urllib3==2.2.2
-      - virtualenv==20.26.3
+      - tzdata==2024.2
+      - urllib3==2.2.3
+      - virtualenv==20.27.1
       - wcwidth==0.2.13
       - websocket-client==1.3.3
-      - werkzeug==3.0.4
+      - werkzeug==3.1.3
       - wrapt==1.16.0
-      - xmltodict==0.13.0
-      - yarl==1.9.4
-      - zipp==3.20.0
+      - xmltodict==0.14.2
+      - yarl==1.18.0
+      - zipp==3.21.0
